# cpp-game-test

./: .gitignore  CMakeLists.txt  GameTest.sln  GameTest.vcxproj  GameTest.vcxproj.filters  LICENSE  readme.md  todo.txt
resources/: enemies.json  npcs.json  particles.json  settings.json  texts.json  weapons.json
resources/shaders/: crumble.fs  light_mask.fs
resources/tilemaps/: dungeon.tsj  dungeon001.json  dungeon002.json  dungeon003.json  dungeon004.json  dungeon005.json  dungeon006.json  dungeon_entry.json  dungeon_shop.json  dungeon_template_double_h.json  dungeon_template_double_w.json  dungeon_template_single.json  fields.tsj  test.tsj  test_dungeon.json  test_dungeon1.json  test_dungeon2.json  test_dungeon3.json  test_fields.json  test_map.txt  test_map_big.json  test_map_small.json
src/: AssetLoader.cpp  AssetLoader.h  Behavior.cpp  Behavior.h  CircleOverlay.cpp  CircleOverlay.h  Commands.cpp  Commands.h  Controls.cpp  Controls.h  CutsceneManager.cpp  CutsceneManager.h  Dungeon.cpp  Dungeon.h  Emitter.h  EventManager.cpp  EventManager.h  Events.cpp  Events.h  Game.cpp  Game.h  InventoryManager.cpp  InventoryManager.h  ItemData.cpp  ItemData.h  Main.cpp  MenuSelect.cpp  MenuSelect.h  Particle.cpp  Particle.h  Savegame.cpp  Savegame.h  Scene.h  Sprite.cpp  Sprite.h  TextBox.cpp  TextBox.h  TileMap.cpp  TileMap.h  Utils.cpp  (+1 more)
src/gameStates/: GameOver.cpp  GameOver.h  HUD.cpp  HUD.h  InGame.cpp  InGame.h  Inventory.cpp  Preload.cpp  Preload.h  TitleScreen.cpp  TitleScreen.h
src/scenes/: GameOver.cpp  GameOver.h  HUD.cpp  HUD.h  InGame.cpp  InGame.h  Inventory.cpp  Inventory.h  InventoryManager.cpp  InventoryManager.h  InventoryUI.cpp  InventoryUI.h  MapUI.cpp  MapUI.h  Preload.cpp  Preload.h  SelectMenu.cpp  SelectMenu.h  SoundTest.cpp  SoundTest.h  StartMenu.cpp  StartMenu.h  TitleScreen.cpp  TitleScreen.h
